--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,600;1,400&display=swap" rel="stylesheet"> 
+    
     <!-- My CSS -->
     <link rel="stylesheet" href="styles/custom.css">
     <title>My Anki Templates</title>
@@ -20,82 +23,120 @@
     <header class="header">
         <div class="container-fluid">
             <div class="heading-area">
-                <h1 class="big-heading">My Anki Templates</h1>
+                <h1 class="big-heading">The Temple of Templates</h1>
                 <p class="author-heading">by 🦊 <a href="https://github.com/elemarmar"
                         title="Go to my Github">Elemarmar</a></p>
             </div>
         </div>
         <div class="container-fluid">
-            <ul class="nav nav-pills nav-justified">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">All</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Languages</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">German</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Polish</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Other</a>
-                </li>
-            </ul>
+            <nav>
+                <ul class="nav nav-pills nav-justified">
+                    <li class="nav-item">
+                        <span class="nav-link" href="#">All</span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link" href="#">Languages</span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link" href="#">German</span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link" href="#">Polish</span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link">Other</span>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
+
     <main class="container-fluid">
         <div class="card-area">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-4 col-lg-3 polish languages card-item">
                     <div class="card">
                         <img src="./images/polish-verbs-img.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            <h5 class="card-title">Polish Verb Conjugations</h5>
+                            <p class="card-text">A template for learning Polish conjugation. It is completely interactive, by clicking/tapping on boxes that show up the annswers. It includes X tables with X conjugations, notes, examples, carousel. All <b>The Witcher</b> inspired!
                             </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="./templates/polish-verbs/index.html" class="btn btn-primary">Try it out</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card">
+                <div class="col-sm-6 col-md-4 col-lg-3 other card-item">
+                    <div class="card card-adalab">
                         <img src="./images/card-image-adalab.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            <h5 class="card-title">Adalab</h5>
+                            <p class="card-text">Template for learning web development concepts from Adalab with question-answer, <b>terminal for code</b> and <b>language icons.</b>
                             </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="./templates/adalab/index.html" class="btn btn-primary">Pruébalo</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-4 col-lg-3  german languages card-item">
                     <div class="card">
                         <img src="./images/card-image-german-vocab.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            <h5 class="card-title">German vocabulary</h5>
+                            <p class="card-text">A simple template for German vocabulary with picture, <b>drop-down extra info menu</b>, tags, translation, example sentence and <b>hint sentence</b> when hovering on the image (tap on mobile).
                             </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="./templates/german-vocab/index.html" class="btn btn-primary">Probier's mal</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-4 col-lg-3 card-item">
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            <h5 class="card-title">Coming next</h5>
+                            <p class="card-text">A template for learning strong verbs in German, some duden-inspired German vocab and grammar templates. Also, some more Polish vocab templates! 🔥
                             </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Waiting</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- German duden vocab -->
+                <div class="col-sm-6 col-md-4 col-lg-3 card-item languages german">
+                    <div class="card">
+                        <img src="./images/dudenvocab1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">German duden Vocab</h5>
+                            <p class="card-text">A template for learning <b>German vocabulary</b> inspired by <b>Duden</b> dictionary. It has place for examples, translations, definitions and extra info.
+                            </p>
+                            <a href="#" class="btn btn-primary">Waiting</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- German duden grammar -->
+                <div class="col-sm-6 col-md-4 col-lg-3 card-item languages german">
+                    <div class="card">
+                        <img src="./images/dudengrammar.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">German Duden Grammar</h5>
+                            <p class="card-text">A little experiment for reviewing <b>German grammar</b>. It shows grammar explanation of a point, a table of contents. The key is that <b>some sentences/words are hidden</b> and you can only see them when you hover or tap (mobile) on them.
+                            </p>
+                            <a href="#" class="btn btn-primary">Waiting</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- German starke verbe -->
+                <div class="col-sm-6 col-md-4 col-lg-3 card-item languages german">
+                    <div class="card">
+                        <img src="./images/germanstark.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">German Starke Verben</h5>
+                            <p class="card-text">A template for learning die starken Verben: it includes the verb, its conjugation in <b>Präsens, Präteritum & Partizip II</b>, a <b>list of all verbs</b> that conjugate similar and place for a <b>picture/text</b> that acts as a story that connects all verbs and helps you <b>remember them</b>!
+                            </p>
+                            <a href="#" class="btn btn-primary">Waiting</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <ul>
-                <li><a href="./languages/polish-verbs/index.html">Polish verbs</a></li>
-            </ul>
 
 
         </div>
@@ -115,6 +156,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
